--- a/src/assets/markmap.css
+++ b/src/assets/markmap.css
@@ -8,11 +8,16 @@ p {
 a {
   color: green;
 }
+
 li {
   list-style-type: none;
   padding-left: 10px;
-
 }
+
+li.subdir {
+  padding-left: 20px;
+}
+
 .under-1 {
   list-style-type: circle;
 }
