--- a/src/assets/markmap.css
+++ b/src/assets/markmap.css
@@ -1,4 +1,7 @@
-@import url('https://cdn.jsdelivr.net/npm/tailwindcss@2.2.0/dist/tailwind.min.css');
+/* @import url('https://cdn.jsdelivr.net/npm/tailwindcss@2.2.0/dist/tailwind.min.css'); */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 h1,
 p {
