--- a/src/assets/markmap.css
+++ b/src/assets/markmap.css
@@ -8,9 +8,9 @@ body {
 }
 
 .markmap-foreign div:not(:empty) {
-  padding: 3px;
+  padding: 1px 2px 0 4px;
   border: groove .1em red;
-  border-radius: .5em;
+  border-radius: .2em;
   background-color: antiquewhite;
 }
 
