--- a/src/assets/markmap.css
+++ b/src/assets/markmap.css
@@ -6,3 +6,11 @@
 li {
   list-style-type: none;
 }
+
+.mm-toolbar>.mm-toolbar-item:nth-child(n+4)>svg {
+  padding-left: 3px;
+  padding-top: 2px;
+  width: 90%;
+  height: 90%;
+  cursor: pointer;
+}
