--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -8,8 +8,7 @@ li {
 }
 
 .mm-toolbar>.mm-toolbar-item:nth-child(n+4)>svg {
-  padding-left: 3px;
-  padding-top: 2px;
+  padding: 2px;
   width: 90%;
   height: 90%;
   cursor: pointer;
