--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -3,12 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-li {
+details li {
   list-style-type: none;
-}
-
-div {
-  overflow: hidden;
 }
 
 .mm-toolbar>.mm-toolbar-item,
